Add Observer to get devices once user is logged in Also fix LogInCall class name Also delete default file templates